# contrapplicative

./: README.md  contrapplicative.cabal
src/: Preamble.hs
src/Control/Applicative/: Contravariant.hs
src/Data/Functor/Contravariant/: Contra.hs
